WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215272
Fix inequality in newly added assertion
https://bugs.webkit.org/show_bug.cgi?id=215272
Summary
Fix inequality in newly added assertion
Robin Morisset
Reported
2020-08-07 08:55:15 PDT
In IndexSparseSet::validate() (that I just added), there is an assertion that m_values.size() < m_map.size(). It should be <= instead.
Attachments
Patch
(1.30 KB, patch)
2020-08-07 08:57 PDT
,
Robin Morisset
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Robin Morisset
Comment 1
2020-08-07 08:57:10 PDT
Created
attachment 406177
[details]
Patch
EWS
Comment 2
2020-08-07 09:39:35 PDT
Committed
r265378
: <
https://trac.webkit.org/changeset/265378
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 406177
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-08-07 09:40:22 PDT
<
rdar://problem/66685769
>
Alexey Proskuryakov
Comment 4
2020-08-07 09:41:57 PDT
Comment on
attachment 406177
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=406177&action=review
> Source/WTF/ChangeLog:8 > + No new tests, as it was caught by our testing infrastructure (not sure why it only got caught after landing).
As determined in a Slack discussion, the explanation is that the landed patch was different from what went through EWS.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug