Fix inequality in newly added assertion https://bugs.webkit.org/show_bug.cgi?id=215272

Reviewed by Alexey Proskuryakov.

No new tests, as it was caught by our testing infrastructure (not sure why it only got caught after landing).

* wtf/IndexSparseSet.h:
(WTF::OverflowHandler>::validate):


Canonical link: https://commits.webkit.org/228056@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265378 268f45cc-cd09-0410-ab3c-d52691b4dbfc